# rotacitnehtua

./: .editorconfig  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  TODO.md  authenticator-search-provider.py.in  authenticator.py.in  code-of-conduct.md  com.github.bilelmoussaoui.Authenticator.json  meson.build  meson_options.txt  meson_post_install.py  requirements.txt  yoyo.ini
Authenticator/: application.py  application.py.in  utils.py  utils.py.in
Authenticator/models/: account.py  backup.py  keyring.py  qr_reader.py  settings.py  settings.py.in
Authenticator/widgets/: __init__.py  about.py.in  headerbar.py  search_bar.py  settings.py  utils.py  window.py  window.py.in
Authenticator/widgets/accounts/: add.py  list.py
build-aux/: com.github.bilelmoussaoui.Authenticator.json
data/: com.github.bilelmoussaoui.Authenticator.SearchProvider.ini.in  com.github.bilelmoussaoui.Authenticator.SearchProvider.service.in  com.github.bilelmoussaoui.Authenticator.appdata.xml.in  com.github.bilelmoussaoui.Authenticator.appdata.xml.in.in  com.github.bilelmoussaoui.Authenticator.desktop.in.in  com.github.bilelmoussaoui.Authenticator.gresource.xml  com.github.bilelmoussaoui.Authenticator.gschema.xml  com.github.bilelmoussaoui.Authenticator.gschema.xml.in  data.json  meson.build  style.css
data/icons/: meson.build
data/resources/gtk/: style.css
data/resources/gtk/ui/: about_dialog.ui.in  account_add.ui  account_config.ui  account_edit.ui  account_row.ui  accounts_widget.ui  password_widget.ui  provider_image.ui  settings.ui.in  window.ui.in
data/ui/: Shortcuts.ui  about_dialog.ui.in  account_add.ui  account_config.ui  account_edit.ui  account_row.ui  accounts_widget.ui  password_widget.ui  provider_image.ui  settings.ui.in  shortcuts.ui  window.ui.in
hooks/: pre-commit.hook
po/: Authenticator.pot  LINGUAS  POTFILES.in  ar.po  ca.po  da.po  de.po  es.po  fi.po  fr.po  hu.po  id.po  it.po  ko.po  nb.po  nb_NO.po  nl.po  nl_BE.po  pl.po  pt.po  pt_BR.po  ru.po  sr.po  sr@latin.po  sv.po  tr.po  zh_Hant.po
src/: authenticator-search-provider.py.in  authenticator.py.in  meson.build
src/Authenticator/: __init__.py  application.py.in  utils.py  utils.py.in
src/Authenticator/migrations/: authenticator_20190525_01_GdUDU-create-table-accounts.py  authenticator_20190525_02_mdR2o-create-table-providers.py  authenticator_20190525_03_Faezz-restore-old-accounts.py  authenticator_20190525_03_R7miN-add-default-providers.py  authenticator_20190525_04_Faezz-restore-old-accounts.py  authenticator_20190529_01_8bpUj-empty-uneeded-provider-images.py
src/Authenticator/models/: __init__.py  account.py  accounts_manager.py  backup.py  clipboard.py  database.py  favicon.py  keyring.py  logger.py  otp.py  provider.py  qr_reader.py  screenshot.py  settings.py.in
src/Authenticator/widgets/: __init__.py  about.py  headerbar.py  login.py  notification.py  provider_image.py  settings.py  utils.py  window.py  window.py.in
src/Authenticator/widgets/accounts/: __init__.py  add.py  edit.py  list.py  row.py
tools/: yaml2json.py
